--- a/src/style.css
+++ b/src/style.css
@@ -1,79 +1,142 @@
-*
-{
+* {
     box-sizing: border-box;
 }
 
-body
-{
+body {
     margin: 0;
     font-family: Inter, sans-serif;
     background-color: #282D35;
-
 }
 
-nav
-{
+.container {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+}
+
+nav {
     display: flex;
     align-items: center;
-    background-color: #21222A;
-    height: 90px;
+    background-color: #fff;
     padding: 30px 25px;
+    height: 60px;
+    box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
+    z-index: 1;
 }
 
-nav > h1
-{
+nav.dark {
+    background-color: #21222a;
+}
+
+.nav-logo {
+    width: 30px;
+    margin-right: 10px;
+}
+
+nav>h1 {
     margin-right: auto;
     color: #61DAFB;
-    font-weight: 700;
-    font-size: 22px;
 }
 
-nav > h3
-{
-    color: #deebf8;
+nav>h3 {
+    padding-right: 40px;
+    color: #61DAFB;
     font-weight: 600;
 }
 
-nav > img
-{
-    width: 60px;
-    margin-right: 2px;
+.toggler {
+    display: flex;
+    align-items: center;
 }
 
-main
-{
+.toggler p {
+    font-size: 0.625rem;
+    font-weight: 600;
+}
+
+.toggler-slider {
+    width: 25px;
+    height: 13px;
+    background-color: #2B283A;
+    border-radius: 2rem;
+    margin-inline: 7px;
+    cursor: pointer;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    border: 1px solid black;
+    box-sizing: content-box;
+}
+
+nav.dark .toggler-slider {
+    border-color: white;
+    background-color: #F5F5F5;
+}
+
+.toggler-slider-circle {
+    height: 13px;
+    width: 13px;
+    background-color: white;
+    border-radius: 50%;
+}
+
+nav.dark .toggler-slider-circle {
+    background-color: black;
+}
+
+.toggler-light {
+    color: #2B283A;
+}
+
+nav.dark .toggler-light {
+    color: #918E9B;
+}
+
+.toggler-dark {
+    color: #D5D4D8;
+}
+
+nav.dark .toggler-dark {
+    color: #FFFFFF;
+}
+
+nav.dark .toggler-slider {
+    justify-content: flex-end;
+}
+
+
+main {
     padding: 57px 27px;
-    color: white ;
-    background-image: url("https://upload.wikimedia.org/wikipedia/commons/thumb/a/a7/React-icon.svg/2300px-React-icon.svg.png");
-    background-size: 400px;
+    background-image: url("./images/reactjs-icon 2.png");
     background-repeat: no-repeat;
-    background-position: 400px 30%;
+    background-position: right center;
+    flex: 1 1 auto;
+    background-color: white;
+    color: #2b283A;
 }
 
-main > h1
-{
+main.dark {
+    background-color: #282D35;
+    color: white;
+}
+
+.main-title {
     margin: 0;
     font-size: 39px;
     letter-spacing: -0.05em;
 }
 
-ul
-{
+.main-facts {
     margin-top: 46px;
-    max-width:  400px;
+    max-width: 400px;
 }
 
-ul > li
-{
+.main-facts>li {
+    line-height: 19px;
     padding-block: 10px;
 }
 
-ul > li::marker
-{
+.main-facts>li::marker {
     font-size: 1.4rem;
     color: #61DAFB;
 }
-
-
-
-
